// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptListItem rendering tests PromptListItem - isSelected false - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <h3
              class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
            >
              title 1
            </h3>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
              data-slot="button"
              data-testid="toggle-favorite-btn"
              title="Aus Favoriten entfernen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-wrap gap-1.5 mb-2.5"
          >
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 0
            </span>
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 1
            </span>
            <span
              class="text-xs px-2 py-0.5 text-slate-500 font-medium"
            >
              +
              1
               mehr
            </span>
          </div>
          <div
            class="flex items-center gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
            >
              <span
                class="font-semibold text-slate-600"
              >
                v
              </span>
            </span>
            <span
              class="text-slate-300"
            >
              •
            </span>
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                27. Sept. 2025, 02:00 AM
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected true - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-blue-50/60 border-blue-200 shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="absolute left-0 top-0 bottom-0 w-1 bg-gradient-to-b from-blue-500 to-blue-600 rounded-l-lg"
      />
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <h3
              class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
            >
              title 1
            </h3>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-0 group-hover:opacity-100 transition-all duration-200"
              data-slot="button"
              data-testid="toggle-favorite-btn"
              title="Zu Favoriten hinzufügen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star w-4 h-4 transition-all text-slate-400 hover:text-yellow-500 hover:scale-110"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-wrap gap-1.5 mb-2.5"
          >
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 0
            </span>
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 1
            </span>
            <span
              class="text-xs px-2 py-0.5 text-slate-500 font-medium"
            >
              +
              1
               mehr
            </span>
          </div>
          <div
            class="flex items-center gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
            >
              <span
                class="font-semibold text-slate-600"
              >
                v
              </span>
            </span>
            <span
              class="text-slate-300"
            >
              •
            </span>
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                27. Sept. 2025, 02:00 AM
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
